<resources>
    <string name="app_name">Sağlıklı Kal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">Giriş Yap</string>
    <string name="password">Şifre</string>
    <string name="email">E-posta</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="create_account">Kayıt Ol</string>
    <string name="have_account">Hesabınız var mı? Giriş Yapın.</string>
    <string name="no_account">Mevcut bir hesabınız yok mu? Kayıt Olun.</string>
    <string name="home">Ana Sayfa</string>
    <string name="profile">Profil</string>
    <string name="message">Mesaj</string>
    <string name="settings">Ayarlar</string>
    <string name="hello_name">Merhaba, İsim 👋</string>
    <string name="last_message">Son Mesaj</string>
    <string name="_00_00">00.00</string>
    <string name="messages">Mesajlar</string>
    <string name="goal">Hedef</string>
    <string name="select_goal">Hedef Seç</string>
    <string name="ya">Yaş</string>
    <string name="kilo">Kilo</string>
    <string name="g_nl_k">Günlük</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="al_nan_kalori">Alınan Kalori</string>
    <string name="xxxx">xxxx</string>
    <string name="kalan_kalori">Hedef Kalori</string>
    <string name="toggle_dinner">Toggle Dinner</string>
    <string name="dinner">Akşam Yemeği</string>
    <string name="toggle_lunch">Toggle Lunch</string>
    <string name="lunch">Öğle Yemeği</string>
    <string name="toggle_breakfast">Toggle Breakfast</string>
    <string name="breakfast">Kahvaltı</string>
    <string name="choose_gender">Cinsiyet Seç</string>
    <string name="gender">Cinsiyet</string>
    <string name="boy">Boy</string>
    <string name="aktivite_seviyesi">Aktivite Seviyesi</string>
    <string name="enerji_harcanimi">Enerji Harcanımı</string>
    <string name="part_of_day">Part of Day</string>
    <string name="close">Close</string>
    <string name="product_name">Product Name</string>
    <string name="amount">amount</string>
    <string name="kcal">kcal</string>
    <string name="line">-</string>
    <string name="aperatifler_di_er">Aperatifler/Diğer</string>
    <string name="egzersiz">Egzersiz</string>
    <string name="kas_ad">Kas Adı</string>
    <string name="egzersiz_adi">Egzersiz Adı</string>
    <string name="hedef">Hedef</string>
    <string name="ekipman">Ekipman</string>
    <string name="egzersiz_talimat">Egzersiz Talimatı</string>
    <string name="hadi_ba_layal_m">Hadi Başlayalım!</string>
    <string name="break_and_next_set">Mola ve Sonraki Set</string>
    <string name="finish_workout">Antrenmanı Bitir</string>
    <string name="execution_define">Ağırlıkları ve tekrarları fitness hedeflerinize uyacak şekilde ayarlayarak mükemmel egzersiz rutinini tanımlayın. Optimum sonuçlar ve memnuniyet için antrenmanınızın her yönünü kişiselleştirin.</string>
    <string name="personalize_your_training">Egzersizinizi Kişiselleştirin</string>
    <string name="reps">Tekrar</string>
    <string name="sets">Set</string>
    <string name="type">Tür</string>
    <string name="weight">Ağırlık</string>
    <string name="save">Kaydet</string>
    <string name="please_fill_in_the_empty_fields">Lütfen boş alanları doldurunuz.</string>
    <string name="profili_g_ncelle">Profili Güncelle</string>
    <string name="k_yap">Çıkış Yap</string>
    <string name="update">Güncelle</string>
</resources>